adding components, expanding simulator, adding backplane

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,6 +13,10 @@ icarus_add_test(test_types
     core/test_types.cpp
 )
 
+icarus_add_test(test_component
+    core/test_component.cpp
+)
+
 # Signal backplane tests (Phase 1.3)
 icarus_add_test(test_signal
     signal/test_signal.cpp
