--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,6 +16,7 @@ icarus_add_test(test_types
 icarus_add_test(test_component
     core/test_component.cpp
 )
+target_include_directories(test_component PRIVATE ${PROJECT_SOURCE_DIR}/components)
 
 # Signal backplane tests (Phase 1.3)
 icarus_add_test(test_signal
