--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -57,6 +57,13 @@ icarus_add_test(test_simulation_builder
 )
 target_include_directories(test_simulation_builder PRIVATE ${PROJECT_SOURCE_DIR}/components)
 
+# Runner and Reset tests
+icarus_add_test(test_runner_and_reset
+    sim/runner_and_reset_test.cpp
+)
+target_include_directories(test_runner_and_reset PRIVATE ${PROJECT_SOURCE_DIR}/components)
+
+
 # SymbolicTracer tests (Phase 3.3)
 icarus_add_test(test_symbolic_tracer
     symbolic/symbolic_tracer_test.cpp
@@ -67,5 +74,10 @@ target_include_directories(test_symbolic_tracer PRIVATE ${PROJECT_SOURCE_DIR}/co
 icarus_add_test(test_numeric_symbolic_comparison
     symbolic/numeric_symbolic_comparison_test.cpp
 )
-target_include_directories(test_numeric_symbolic_comparison PRIVATE ${PROJECT_SOURCE_DIR}/components)
+
+icarus_add_test(test_generate_graph
+    symbolic/generate_graph_test.cpp
+)
+target_include_directories(test_generate_graph PRIVATE ${PROJECT_SOURCE_DIR}/components)
+
 
