signal router, componet factory init commit

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -79,3 +79,12 @@ icarus_add_test(test_generate_graph
     symbolic/generate_graph_test.cpp
 )
 target_include_directories(test_generate_graph PRIVATE ${PROJECT_SOURCE_DIR}/components)
+
+# Phase 4.0: Configuration Infrastructure tests
+icarus_add_test(test_component_config
+    core/test_component_config.cpp
+)
+
+icarus_add_test(test_signal_router
+    signal/test_signal_router.cpp
+)
