--- a/config/orbital_demo.yaml
+++ b/config/orbital_demo.yaml
@@ -19,7 +19,7 @@ logging:
   console_level: debug       # trace, debug, info, warning, error
   file_enabled: true      # Set to true to write log file
   file_path: "orbital_demo.log"
-  file_level: debug
+  file_level: trace
   progress_enabled: true
   profiling_enabled: true
 
