--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -32,3 +32,9 @@ icarus_add_example(tumbling_body_demo
     tumbling_body_demo.cpp
 )
 
+# Aggregation Demo
+# Demonstrates: MassAggregator, ForceAggregator, multi-body systems
+icarus_add_example(aggregation_demo
+    aggregation_demo.cpp
+)
+
