--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "references/janus"]
 	path = references/janus
 	url = https://github.com/tanged123/janus.git
+[submodule "tools/PlotJuggler"]
+	path = tools/PlotJuggler
+	url = https://github.com/facontidavide/PlotJuggler.git
