--- a/config/orbital_demo.yaml
+++ b/config/orbital_demo.yaml
@@ -45,6 +45,7 @@ recording:
   mode: outputs                # "all", "outputs", or "signals"
   include_derivatives: false   # Exclude *_dot signals
   export_csv: true             # Export CSV copy for PlotJuggler
+  decimation: 10               # Record every 10th frame
   # include:                   # Only used when mode = "signals"
   #   - "Satellite\\.position\\..*"
   #   - "Satellite\\.velocity\\..*"
