--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,5 +13,11 @@ jobs:
       with:
         nix_path: nixpkgs=channel:nixos-unstable
 
+    - name: Setup Cachix
+      uses: cachix/cachix-action@v15
+      with:
+        name: tanged123
+        authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+
     - name: Build & Test (Flake Check)
       run: ./scripts/ci.sh
