--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -13,6 +13,12 @@ jobs:
       with:
         nix_path: nixpkgs=channel:nixos-unstable
 
+    - name: Setup Cachix
+      uses: cachix/cachix-action@v15
+      with:
+        name: tanged123
+        authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+
     - name: Run Coverage Script
       run: nix develop --command ./scripts/coverage.sh
 
