--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,6 +15,12 @@ jobs:
       with:
         nix_path: nixpkgs=channel:nixos-unstable
 
+    - name: Setup Cachix
+      uses: cachix/cachix-action@v15
+      with:
+        name: tanged123
+        authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+
     - name: Generate Documentation
       run: nix develop --command ./scripts/generate_docs.sh
 
