--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -8,9 +8,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: cachix/install-nix-action@v20
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
 
-      - uses: DeterminateSystems/magic-nix-cache-action@main
+      - name: Setup Cachix
+        uses: cachix/cachix-action@v15
+        with:
+          name: tanged123
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
 
       - name: Check formatting
         run: |
